<resources>
    <string name="app_name">Memory Matching</string>

    <!-- Common. -->
    <string name="format_seconds">%1$ds</string>
    <string name="error_number">Enter a number.</string>
    <string name="error_number_positive">Enter a number greater than 0.</string>
    <string name="app_restart">Restarting application.</string>

    <!-- Menu buttons. -->
    <string name="menu_play">Play</string>
    <string name="menu_save">Save</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">How to Play</string>

    <!-- Game. -->
    <string name="game_score">Score: %1$d</string>
    <string name="game_score_default">Score: 0</string>

    <string name="game_time">Time: %1$d</string>
    <string name="game_time_default">Time: —</string>

    <string name="game_restart">Restart</string>
    <string name="game_quit">Quit</string>
    <string name="game_menu">Menu</string>
    <string name="game_replay">Replay</string>

    <string name="game_cant_restart">Cannot restart game yet.</string>

    <!-- Game Over. -->
    <string name="game_over">Game Over</string>
    <string name="game_over_message">Don\'t give up and try again.\nIt will be better.</string>

    <!-- Game Won. -->
    <string name="game_win">You Won</string>
    <string name="game_win_message">You found %1$d matches within %2$ds with a score of %3$d.</string>

    <!-- Settings. -->
    <string name="settings_grid_size">Grid Size</string>
    <string name="settings_match_count">Match Count</string>
    <string name="settings_view_time">View Time</string>
    <string name="settings_game_mode">Game Mode</string>
    <string name="settings_night_theme">Night Mode</string>
    <string name="settings_lose_time">Time Limit</string>

    <string name="settings_desc_grid_size">The number of cards.</string>
    <string name="settings_desc_match_count">The number of cards to match.</string>
    <string name="settings_desc_view_time">Duration of viewing cards.</string>
    <string name="settings_desc_game_mode">Current game mode.</string>
    <string name="settings_desc_night_theme">Apply night theme.</string>
    <string name="settings_desc_lose_time">Maximum time limit.</string>

    <!-- Setting messages. -->
    <string name="settings_saved">Setting saved.</string>

    <string name="settings_grid_divisible">Grid size must be divisible by match count.</string>
    <string name="settings_grid_bound_low">Grid must be greater than match count.</string>
    <string name="settings_grid_bound_high">Grid must be lower or equal to 100.</string>

    <string name="settings_match_bound_low">Match count must be greater than 0.</string>
    <string name="settings_match_bound_high">Match count must be lower or equal to 10.</string>
    <string name="settings_match_grid">The grid has been updated as well.</string>

    <string name="settings_view_bound_low">View time must be greater than 0.</string>
    <string name="settings_view_bound_high">View time must be lower or equal to 10.</string>

    <string name="settings_time_bound_low">Time limit must be greater than 0.</string>
    <string name="settings_time_bound_high">Time limit must be lower or equal to 300.</string>

    <!-- Menu Help. -->
    <string-array name="menu_help_rules">
        <item>1) The cards are first shuffled.</item>
        <item>2) Then shown for a few seconds.</item>
        <item>3) Afterwards, the cards are hidden.</item>
        <item>4) Try to match the cards.</item>
        <item>5) If the two cards match, keep them.</item>
        <item>6) If they don\'t match, turn them back.</item>
        <item>7) Win by matching all the cards.</item>
    </string-array>
</resources>
