<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_rectangle_rounded_filled"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:minWidth="260dp"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/game_win_img"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/path16" />

    <TextView
        style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:text="@string/game_win" />

    <TextView
        android:id="@+id/game_win_text_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:text="@string/game_win_message" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_win_btn_menu"
            style="@style/Widget.Corsage.FilledButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/game_menu"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@id/game_win_divider_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/game_win_divider_btn"
            android:layout_width="8dp"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/game_win_btn_replay"
            style="@style/Widget.Corsage.FilledButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/game_replay"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/game_win_divider_btn"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>